--- a/about.html
+++ b/about.html
@@ -44,22 +44,17 @@
     <main>
         <div class="container-fluid p-0">
             <!-- <img class="d-block" src="img/bg2.jpg" alt="" style="height: 400px; width: 100%;"> -->
-            <div style="background-image: url(img/bg2.jpg); background-color: rgb(59, 58, 48); height: 300px;">
-                <img class="header" src="img/elektroWhite2.svg" height="50" width="50">
+            <div style="background-image: url(image/bg2.jpg); background-color: rgb(59, 58, 48); height: 300px;">
+                <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
                 <h2 class="header" style="color: white;">About</h2>
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="img/bg1.jpg" style=" width: auto; height: 250px;"></center>
+                <center><img src="image/bg1.jpg" style=" width: auto; height: 250px;"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Elektro was founded in 2003 by a group of engineers who wanted to prove that people didn’t need to compromise to drive electric – that electric vehicles can be better, quicker and more fun to drive than gasoline cars. Today, Elektro builds not only all-electric vehicles but also infinitely scalable clean energy generation and storage products. Elektro believes the faster the world stops relying on fossil fuels and moves towards a zero-emission future, the better.</p>
             </div>
         </div>
         <div class="d-flex flex-wrap-reverse justify-content-center">
@@ -72,12 +67,12 @@
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="img/bg1.jpg" style="width: auto; height: 200px;"></center>
+                <center><img src="image/bg1.jpg" style="width: auto; height: 200px;"></center>
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="img/bg1.jpg" style="width: auto; height: 200px;"></center>
+                <center><img src="image/bg1.jpg" style="width: auto; height: 200px;"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
