--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Electro</title>
+    <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
     <!-- Font -->
@@ -19,7 +20,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/elektroWhite2.svg" alt="" width="35" height="35">
+                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
                     <span style="color: #FEC400;">E</span>lectro
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -56,24 +57,24 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/bg1.jpg" alt="Los Angeles" class="d-block" style="width:100%; height: 600px;">
+                    <img src="image/bg (2).jpg" alt="Carousel 1" class="d-block" style="width:100%; height: 600px;">
                     <div class="carousel-caption">
-                        <img src="img/elektroWhite2.svg" alt="" width="35" height="35">
-                        <h3>Welcome to <span style="color: #FEC400;">Electro</span></h3>
+                        <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                        <h3>Welcome</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/bg2.jpg" alt="Chicago" class="d-block" style="width:100%; height: 600px;">
+                    <img src="image/bg (1).jpg" alt="Carousel 2" class="d-block" style="width:100%; height: 600px;">
                     <div class="carousel-caption">
-                        <img src="img/elektroWhite2.svg" alt="" width="35" height="35">
-                        <h3>Welcome to Electro</h3>            
+                        <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                        <h3>Welcome</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/bg1.jpg" alt="New York" class="d-block" style="width:100%; height: 600px;">
+                    <img src="image/bg (3).jpg" alt="Carousel 3" class="d-block" style="width:100%; height: 600px;">
                     <div class="carousel-caption">
-                        <img src="img/elektroWhite2.svg" alt="" width="35" height="35">
-                        <h3>Welcome to Electro</h3>
+                        <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                        <h3>Welcome</h3>
                     </div>
                 </div>
             </div>
@@ -112,30 +113,28 @@
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
         </div>
-        <div><img class="img-fluid banner" src="img/bg2.jpg" alt=""></div>
+        <div class="text-center"><img class="img-fluid banner" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
         <h2 class="text-center m-5">Featured Vehicle</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
             <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="img/bg1.jpg" style="width: 100%;">
+                <img src="image/bg1.jpg" style="width: 100%;">
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="img/bg1.jpg" style="width: 100%;">
+                <img src="image/bg1.jpg" style="width: 100%;">
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="img/bg1.jpg" style="width: 100%;">
+                <img src="image/bg1.jpg" style="width: 100%;">
             </div>
             <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="img/bg1.jpg" style="width: 100%;">
+                <img src="image/bg1.jpg" style="width: 100%;">
             </div>
         </div>
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
             <div class="col-lg-3 col-md-3 col-sm-5 p-3">
-                <h5 class="mt-3 mb-3 fw-bold">Additional Information</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
+                <p>Thank you for visiting our website</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-5 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
