--- a/vehicle.html
+++ b/vehicle.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Electro</title>
+    <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
     <!-- Font -->
@@ -15,9 +17,12 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Electro</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                    <span style="color: #FEC400;">E</span>lectro
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,10 +46,149 @@
         </nav>
     </header>
     <main>
-        
+        <!-- Top Title -->
+        <div style="background-image: url(image/modely/model.jpg); background-color: rgb(18, 24, 32); height: 300px;">
+            <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
+            <h2 class="header" style="color: white;">About</h2>
+        </div>
+        <!-- Vehicle List -->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="card mt-5 ms-5" style="width: 10rem;">
+                        <div class="card-header">
+                            All
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Model X</li>
+                            <li class="list-group-item">Model 3</li>
+                            <li class="list-group-item">Model Y</li>
+                            <li class="list-group-item">Model S</li>
+                            <li class="list-group-item">Cybertruck</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <h4 class="m-3">Choose your car :</h4>
+                    <div class="d-flex flex-wrap justify-content-start ">
+                        <div class="m-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Model X</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="m-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Model X</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="m-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Model X</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="m-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Model X</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="m-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Model X</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="m-3">
+                            <div class="card" style="width: 18rem;">
+                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Model X</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="d-flex flex-wrap justify-content-center">
+                <div class="m-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Model X</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="m-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Model X</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="m-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Model X</p>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
-        
+        <div class="d-flex flex-wrap justify-content-center footer">
+            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
+                <p>Thank you for visiting our website</p>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
+                <ul>
+                    <li>
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="vehicle.html">Vehicle</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
+                <div class="form-group mb-2">
+                    <input type="text" class="form-control" placeholder="Name" name="">
+                </div>
+                <div class="form-group mb-2">
+                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                </div>
+                <div class="form-group mb-2">
+                    <textarea class="form-control" rows="4"></textarea>
+                </div>
+                <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
+            </div>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
