--- a/vehicle.html
+++ b/vehicle.html
@@ -49,13 +49,13 @@
         <!-- Top Title -->
         <div style="background-image: url(image/modely/model.jpg); background-color: rgb(18, 24, 32); height: 300px;">
             <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
-            <h2 class="header" style="color: white;">About</h2>
+            <h2 class="header" style="color: white;">Vehicle</h2>
         </div>
         <!-- Vehicle List -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="card mt-5 ms-5" style="width: 10rem;">
+                    <div class="card" style="width: 10rem; margin: 85px 0 0 80px;">
                         <div class="card-header">
                             All
                         </div>
