Update about, contact, and css

--- a/about.html
+++ b/about.html
@@ -42,13 +42,12 @@
         </nav>
     </header>
     <main>
-        <div class="container-fluid p-0">
-            <!-- <img class="d-block" src="img/bg2.jpg" alt="" style="height: 400px; width: 100%;"> -->
-            <div style="background-image: url(image/bg2.jpg); background-color: rgb(59, 58, 48); height: 300px;">
-                <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
-                <h2 class="header" style="color: white;">About</h2>
-            </div>
+        <!-- Top Title -->
+        <div style="background-image: url(image/modely/model.jpg); background-color: rgb(18, 24, 32); height: 300px;">
+            <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
+            <h2 class="header" style="color: white;">Contact Us</h2>
         </div>
+        <!-- About -->
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
                 <center><img src="image/bg1.jpg" style=" width: auto; height: 250px;"></center>
