update contact and vehicle

--- a/vehicle.html
+++ b/vehicle.html
@@ -55,7 +55,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="card" style="width: 10rem; margin: 85px 0 0 80px;">
+                    <div class="card text-white" style="width: 10rem; margin: 85px 0 0 80px;">
                         <div class="card-header">
                             All
                         </div>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h4 class="m-3">Choose your car :</h4>
-                    <div class="d-flex flex-wrap justify-content-start ">
+                    <div class="d-flex flex-wrap justify-content-start text-white">
                         <div class="m-3">
                             <div class="card" style="width: 18rem;">
                                 <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
