--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                         <div class="card-map-bg px-4 pb-4 pt-3-5 text-white">
                             <h5 class="card-title h5 living-coral-text">Central Park Zoo</h5>
                             <div class="d-flex justify-content-between living-coral-text">
-                                <h6 class="card-subtitle font-weight-light">A place to relax</h6>                            
+                                <h6 class="card-subtitle font-weight-light">A place to relax</h6>
                             </div>
                             <hr>
                             <table class="table table-borderless text-white">
@@ -198,7 +198,44 @@
         </div>
     </main>
     <footer>
+        <div class="d-flex flex-wrap justify-content-center footer">
+            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
+                <p>Thank you for visiting our website</p>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
+                <ul>
+                    <li>
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="vehicle.html">Vehicle</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
+                <div class="form-group mb-2">
+                    <input type="text" class="form-control" placeholder="Name" name="">
+                </div>
+                <div class="form-group mb-2">
+                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                </div>
+                <div class="form-group mb-2">
+                    <textarea class="form-control" rows="4"></textarea>
+                </div>
+                <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
+            </div>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript">
     const card = document.querySelector('.map-card');
     const cardBody = card.querySelector('.card-body')
