--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
     </header>
     <main>
         <!-- Top Title -->
-        <div style="background-image: url(image/modely/model.jpg); background-color: rgb(18, 24, 32); height: 300px;">
+        <div class="banner">
             <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
-            <h2 class="header" style="color: white;">Contact Us</h2>
+            <h2 class="header text-white">About</h2>
         </div>
         <!-- About -->
         <div class="d-flex flex-wrap justify-content-center">
