--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
-        <h2 class="text-center m-5">Electro</h2>
+        <h2 class="text-center m-5 fw-bold">Electro</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
             <div class="col-lg-3 col-md-12 col-sm-12 p-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="text-center"><img class="img-fluid banner" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
-        <h2 class="text-center m-5">Featured Vehicle</h2>
+        <h2 class="text-center m-5 fw-bold">Featured Vehicle</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
             <div class="col-lg-2 col-md-2 col-sm-12 m-2">
                 <img src="image/bg1.jpg" style="width: 100%;">
