--- a/vehicle.html
+++ b/vehicle.html
@@ -49,7 +49,7 @@
         <!-- Top Title -->
         <div style="background-image: url(image/modely/model.jpg); background-color: rgb(18, 24, 32); height: 300px;">
             <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
-            <h2 class="header" style="color: white;">Vehicle</h2>
+            <h2 class="header text-white">Vehicle</h2>
         </div>
         <!-- Vehicle List -->
         <div class="container-fluid">
