--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
         </div>
-        <div class="text-center"><img class="img-fluid banner" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
+        <div class="text-center"><img class="img-fluid" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
         <h2 class="text-center m-5 fw-bold">Featured Vehicle</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
             <div class="col-lg-2 col-md-2 col-sm-12 m-2">
