--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 <!-- central -->
                 <div class="card map-card m-5" style="width: 23rem;">
                     <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                        <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.6845099161386!2d106.82252947612652!3d-6.165824998831429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d9f8bd2c2d%3A0x7edd8ed869df05a8!2sJl.%20Ir.%20H.%20Juanda%203%20No.4%2C%20RT.9%2FRW.2%2C%20Kb.%20Klp.%2C%20Kecamatan%20Gambir%2C%20Kota%20Jakarta%20Pusat%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2010120!5e0!3m2!1sen!2sid!4v1656471864358!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                     <div class="card-body closed px-0">
                         <div class="button px-2 mt-3">
@@ -76,7 +76,7 @@
                                         <th scope="row" class="px-0 pb-3 pt-2">
                                             <span class="material-icons">place</span>
                                         </th>
-                                        <td class="pb-3 pt-2">East 64th Street, New York, NY 10021, US</td>
+                                        <td class="pb-3 pt-2">Jl. Ir. H. Juanda 3 No.4, Jakarta, Indonesia</td>
                                     </tr>
                                     <tr class="mt-2">
                                         <th scope="row" class="px-0 pb-3 pt-2">
@@ -93,8 +93,8 @@
                 </div>
                 <!-- Nearest -->
                 <div class="card map-card m-5" style="width: 23rem;">
-                    <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                        <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.1671740991096!2d110.76725998525988!3d-7.556743677173739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a145b34e70fd9%3A0x4de0d1e911623a7c!2sJl.%20A.%20Yani%2C%20Mendungan%2C%20Pabelan%2C%20Kec.%20Kartasura%2C%20Kabupaten%20Sukoharjo%2C%20Jawa%20Tengah%2057169!5e0!3m2!1sen!2sid!4v1656472295682!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                     <div class="card-body closed px-0">
                         <div class="button px-2 mt-3">
@@ -113,7 +113,7 @@
                                         <th scope="row" class="px-0 pb-3 pt-2">
                                             <span class="material-icons">place</span>
                                         </th>
-                                        <td class="pb-3 pt-2">East 64th Street, New York, NY 10021, US</td>
+                                        <td class="pb-3 pt-2">Jl. A. Yani, Sukarta, Indonesia</td>
                                     </tr>
                                     <tr class="mt-2">
                                         <th scope="row" class="px-0 pb-3 pt-2">
