update all html

--- a/about.html
+++ b/about.html
@@ -85,13 +85,11 @@
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-12 col-sm-12 p-3">
-                <h5 class="mt-3 mb-3 fw-bold">Additional Information</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
+                <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
+                <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -108,21 +106,22 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <input type="email" class="form-control" placeholder="Email Address" name="email">
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-2">
                     <textarea class="form-control" rows="4"></textarea>
                 </div>
                 <input type="submit" class="btn btn-secondary btn-block w-100" value="Send" name="">
             </div>
         </div>
     </footer>
+    <!-- javascrip -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
