--- a/contact.html
+++ b/contact.html
@@ -198,11 +198,11 @@
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
                 <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -219,7 +219,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
@@ -234,6 +234,7 @@
             </div>
         </div>
     </footer>
+    <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript">
     const card = document.querySelector('.map-card');
