--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
                 <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -153,7 +153,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
