--- a/vehicle.html
+++ b/vehicle.html
@@ -47,7 +47,7 @@
     </header>
     <main>
         <!-- Top Title -->
-        <div style="background-image: url(image/modely/model.jpg); background-color: rgb(18, 24, 32); height: 300px;">
+        <div class="banner">
             <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
             <h2 class="header text-white">Vehicle</h2>
         </div>
@@ -83,7 +83,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Model X</p>
+                                    <p class="card-text">Model 3</p>
                                 </div>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Model X</p>
+                                    <p class="card-text">Model Y</p>
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Model X</p>
+                                    <p class="card-text">Model S</p>
                                 </div>
                             </div>
                         </div>
@@ -107,15 +107,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">Model X</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="m-3">
-                            <div class="card" style="width: 18rem;">
-                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <p class="card-text">Model X</p>
+                                    <p class="card-text">Cybertruck</p>
                                 </div>
                             </div>
                         </div>
@@ -152,11 +144,11 @@
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
                 <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -173,7 +165,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-5 p-3">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
