--- a/index.html
+++ b/index.html
@@ -116,17 +116,11 @@
         <div class="text-center"><img class="img-fluid" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
         <h2 class="text-center m-5 fw-bold">Featured Vehicle</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
-            <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="image/bg1.jpg" style="width: 100%;">
+            <div class="col-lg-2 col-md-2 col-sm-5 m-3">
+                <img src="image/model3/exterior-image-167.jpg" style="width: 100%;">
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="image/bg1.jpg" style="width: 100%;">
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="image/bg1.jpg" style="width: 100%;">
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 m-2">
-                <img src="image/bg1.jpg" style="width: 100%;">
+            <div class="col-lg-2 col-md-2 col-sm-5 m-3">
+                <img src="image/models/exterior-image-164.webp" style="width: 100%;">
             </div>
         </div>
     </main>
