--- a/about.html
+++ b/about.html
@@ -50,36 +50,31 @@
         <!-- About -->
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/bg1.jpg" style=" width: auto; height: 250px;"></center>
+                <center><img src="image/first model.jpg" style=" width: auto; height: 300px;"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
+                <h3>Our Origin</h3>
                 <p>Elektro was founded in 2003 by a group of engineers who wanted to prove that people didn’t need to compromise to drive electric – that electric vehicles can be better, quicker and more fun to drive than gasoline cars. Today, Elektro builds not only all-electric vehicles but also infinitely scalable clean energy generation and storage products. Elektro believes the faster the world stops relying on fossil fuels and moves towards a zero-emission future, the better.</p>
             </div>
         </div>
         <div class="d-flex flex-wrap-reverse justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h5>Range</h5>
+                <h3>Go Anywhere</h3>
+                <p>With up to 405 miles of estimated range and access to the world’s largest and most powerful fast charging network, you’ll spend less time plugged in and more time on the road.</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/bg1.jpg" style="width: auto; height: 200px;"></center>
+                <center><img src="image/range.jpg" style="width: auto; height: 300px;"></center>
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/bg1.jpg" style="width: auto; height: 200px;"></center>
+                <center><img src="image/safety.jpg" style="width: auto; height: 300px;"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h5>Safety</h5>
+                <h3>High Impact Protection</h3>
+                <p>Our model is built from the ground up as an electric vehicle, with a high-strength architecture and floor-mounted battery pack for incredible occupant protection and low rollover risk. Every new model includes Elektro’s latest active safety features, such as Automatic Emergency Braking, at no extra cost.</p>
             </div>
         </div>
     </main>
