--- a/about.html
+++ b/about.html
@@ -3,12 +3,14 @@
 
 <head>
     <title>Electro</title>
+    <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -18,7 +20,10 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Electro</a>
+                <a class="navbar-brand" href="index.html">
+                    <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
+                    <span style="color: #FEC400;">E</span>lectro
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
