--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <h2 class="text-center m-5 fw-bold">Electro</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
-            <div class="col-lg-3 col-md-12 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-11 col-sm-11 p-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -96,7 +96,7 @@
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 p-3 border border-top-0 border-bottom-0 border-dark">
+            <div class="col-lg-3 col-md-11 col-sm-11 p-3 border-teks">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -104,7 +104,7 @@
                 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-11 col-sm-11 p-3">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -115,12 +115,22 @@
         </div>
         <div class="text-center"><img class="img-fluid" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
         <h2 class="text-center m-5 fw-bold">Featured Vehicle</h2>
-        <div class="d-flex flex-wrap justify-content-center mb-5">
-            <div class="col-lg-2 col-md-2 col-sm-5 m-3">
-                <img src="image/model3/exterior-image-167.jpg" style="width: 100%;">
+        <div class="d-flex flex-wrap justify-content-center mb-5 text-white">
+            <div class="card m-3" style="width: 18rem;">
+                <a class="nav-link" href="vehicle.html">
+                    <img src="image/model3/exterior-image-167.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text text-center">Model 3</p>
+                    </div>
+                </a>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-5 m-3">
-                <img src="image/models/exterior-image-164.webp" style="width: 100%;">
+            <div class="card m-3" style="width: 18rem;">
+                <a class="nav-link" href="vehicle.html">
+                    <img src="image/models/exterior-image-164.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text text-center">Model S</p>
+                    </div>
+                </a>
             </div>
         </div>
     </main>
