--- a/vehicle.html
+++ b/vehicle.html
@@ -72,40 +72,45 @@
                     <h4 class="m-3">Choose your car :</h4>
                     <div class="d-flex flex-wrap justify-content-start text-white">
                         <div class="m-3">
-                            <div class="card" style="width: 18rem;">
-                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                            <div class="card vehicle">
+                                <img src="image/modelx/modelx black.png" class="card-vehicle" alt="...">
+                                <hr class="m-0">
                                 <div class="card-body">
                                     <p class="card-text">Model X</p>
                                 </div>
                             </div>
                         </div>
                         <div class="m-3">
-                            <div class="card" style="width: 18rem;">
-                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                            <div class="card vehicle">
+                                <img src="image/model3/model3 red.png" class="card-vehicle" alt="...">
+                                <hr class="m-0">
                                 <div class="card-body">
                                     <p class="card-text">Model 3</p>
                                 </div>
                             </div>
                         </div>
                         <div class="m-3">
-                            <div class="card" style="width: 18rem;">
-                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                            <div class="card vehicle">
+                                <img src="image/modely/modely.png" class="card-vehicle" alt="...">
+                                <hr class="m-0">
                                 <div class="card-body">
                                     <p class="card-text">Model Y</p>
                                 </div>
                             </div>
                         </div>
                         <div class="m-3">
-                            <div class="card" style="width: 18rem;">
-                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                            <div class="card vehicle">
+                                <img src="image/models/models blue.png" class="card-vehicle" alt="...">
+                                <hr class="m-0">
                                 <div class="card-body">
                                     <p class="card-text">Model S</p>
                                 </div>
                             </div>
                         </div>
                         <div class="m-3">
-                            <div class="card" style="width: 18rem;">
-                                <img src="image/modely/modely.jpg" class="card-img-top" alt="...">
+                            <div class="card vehicle">
+                                <img src="image/cybertruck/cybertruck_2.png" class="card-vehicle" alt="...">
+                                <hr class="m-0">
                                 <div class="card-body">
                                     <p class="card-text">Cybertruck</p>
                                 </div>
