--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                         <div class="card-map-bg px-4 pb-4 pt-3-5 text-white">
                             <h5 class="card-title h5 living-coral-text">Jakarta Elekro</h5>
                             <div class="d-flex justify-content-between living-coral-text">
-                                <h6 class="card-subtitle font-weight-light">Central dealer</h6>
+                                <h6 class="card-subtitle font-weight-light">Main office</h6>
                             </div>
                             <hr>
                             <table class="table table-borderless text-white">
