--- a/about.html
+++ b/about.html
@@ -48,48 +48,51 @@
     </header>
     <main>
         <!-- Top Title -->
-        <div class="banner">
-            <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
-            <h2 class="header text-white">About</h2>
+        <div class="banner d-flex flex-wrap align-items-center justify-content-center">
+            <div class="col-12">
+                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px"></center>
+                <h2 class="text-white text-center">About</h2>
+            </div>
         </div>
         <!-- About -->
         <div class="d-flex flex-wrap justify-content-center">
-            <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/first model.jpg" style=" width: auto; height: 300px;"></center>
+            <div class="col-lg-5 col-md-5 col-sm-12 m-3">
+                <center><img src="image/first model.jpg" class="card-vehicle"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
+                <h5>History</h5>
                 <h3>Our Origin</h3>
-                <p>Elektro was founded in 2003 by a group of engineers who wanted to prove that people didn’t need to compromise to drive electric – that electric vehicles can be better, quicker and more fun to drive than gasoline cars. Today, Elektro builds not only all-electric vehicles but also infinitely scalable clean energy generation and storage products. Elektro believes the faster the world stops relying on fossil fuels and moves towards a zero-emission future, the better.</p>
+                <p class="text-justify">Elektro was founded in 2003 by a group of engineers who wanted to prove that people didn’t need to compromise to drive electric – that electric vehicles can be better, quicker and more fun to drive than gasoline cars. Today, Elektro builds not only all-electric vehicles but also infinitely scalable clean energy generation and storage products. Elektro believes the faster the world stops relying on fossil fuels and moves towards a zero-emission future, the better.</p>
             </div>
         </div>
         <div class="d-flex flex-wrap-reverse justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
                 <h5>Range</h5>
                 <h3>Go Anywhere</h3>
-                <p>With up to 405 miles of estimated range and access to the world’s largest and most powerful fast charging network, you’ll spend less time plugged in and more time on the road.</p>
+                <p class="text-justify">With up to 405 miles of estimated range and access to the world’s largest and most powerful fast charging network, you’ll spend less time plugged in and more time on the road.</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/range.jpg" style="width: auto; height: 300px;"></center>
+                <center><img src="image/range.jpg" class="card-vehicle"></center>
             </div>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
-                <center><img src="image/safety.jpg" style="width: auto; height: 300px;"></center>
+                <center><img src="image/safety.jpg" class="card-vehicle"></center>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-12 p-3">
                 <h5>Safety</h5>
                 <h3>High Impact Protection</h3>
-                <p>Our model is built from the ground up as an electric vehicle, with a high-strength architecture and floor-mounted battery pack for incredible occupant protection and low rollover risk. Every new model includes Elektro’s latest active safety features, such as Automatic Emergency Braking, at no extra cost.</p>
+                <p class="text-justify">Our model is built from the ground up as an electric vehicle, with a high-strength architecture and floor-mounted battery pack for incredible occupant protection and low rollover risk. Every new model includes Elektro’s latest active safety features, such as Automatic Emergency Braking, at no extra cost.</p>
             </div>
         </div>
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-3 col-12 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
                 <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
+            <div class="col-lg-3 col-md-3 col-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -106,7 +109,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
+            <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
