--- a/contact.html
+++ b/contact.html
@@ -48,15 +48,17 @@
     </header>
     <main>
         <!-- Top Title -->
-        <div class="banner">
-            <img class="header" src="image/elektroWhite2.svg" height="50" width="50">
-            <h2 class="header text-white">Contact Us</h2>
+        <div class="banner d-flex flex-wrap align-items-center justify-content-center">
+            <div class="col-12">
+                <center><img class="m-3" src="image/elektroWhite2.svg" style="height:50px; width:50px"></center>
+                <h2 class="text-white text-center">Contact Us</h2>
+            </div>
         </div>
         <!-- Map -->
         <div class="container-fluid">
             <div class="d-flex flex-wrap justify-content-center">
-                <!-- central -->
-                <div class="card map-card m-5" style="width: 23rem;">
+                <!-- main -->
+                <div class="card map-card m-3 col-lg-5 col-10">
                     <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.6845099161386!2d106.82252947612652!3d-6.165824998831429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d9f8bd2c2d%3A0x7edd8ed869df05a8!2sJl.%20Ir.%20H.%20Juanda%203%20No.4%2C%20RT.9%2FRW.2%2C%20Kb.%20Klp.%2C%20Kecamatan%20Gambir%2C%20Kota%20Jakarta%20Pusat%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2010120!5e0!3m2!1sen!2sid!4v1656471864358!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
@@ -92,7 +94,7 @@
                     </div>
                 </div>
                 <!-- Nearest -->
-                <div class="card map-card m-5" style="width: 23rem;">
+                <div class="card map-card m-3 col-lg-5 col-10">
                     <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.1671740991096!2d110.76725998525988!3d-7.556743677173739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a145b34e70fd9%3A0x4de0d1e911623a7c!2sJl.%20A.%20Yani%2C%20Mendungan%2C%20Pabelan%2C%20Kec.%20Kartasura%2C%20Kabupaten%20Sukoharjo%2C%20Jawa%20Tengah%2057169!5e0!3m2!1sen!2sid!4v1656472295682!5m2!1sen!2sid" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
@@ -101,7 +103,7 @@
                             <a class="btn btn-floating btn-lg living-coral text-white float-end" style="margin-right: .75rem;">More</a>
                         </div>
                         <div class="card-map-bg px-4 pb-4 pt-3-5 text-white">
-                            <h5 class="card-title h5 living-coral-text">Surakarta Elektro Dealer</h5>
+                            <h5 class="card-title h5 living-coral-text">Surakarta Elektro</h5>
                             <div class="d-flex justify-content-between living-coral-text">
                                 <h6 class="card-subtitle font-weight-light">Nearest dealer</h6>
                             </div>
@@ -132,77 +134,77 @@
         </div>
         <!-- Contact Us -->
         <div class="d-flex flex-wrap m-5 text-center justify-content-center">
-            <div class="card text-white m-3" style="max-width: 18rem;">
-                <div class="card-header">
-                    <div class="contact-card-icon shadow-1-strong">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <title>Calls</title>
-                            <desc>A line styled icon from Orion Icon Library.</desc>
-                            <path data-name="layer1" d="M58.9 47l-10.4-6.8a4.8 4.8 0 0 0-6.5 1.3c-2.4 2.9-5.3 7.7-16.2-3.2S19.6 24.4 22.5 22a4.8 4.8 0 0 0 1.3-6.5L17 5.1c-.9-1.3-2.1-3.4-4.9-3S2 6.6 2 15.6s7.1 20 16.8 29.7S39.5 62 48.4 62s13.2-8 13.5-10-1.7-4.1-3-5z" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="card-body pt-5">
+            <div class="card text-white m-3 col-lg-2 col-10">
+                <div class="card-body">
+                    <center>
+                        <div class="contact-card-icon shadow-1-strong m-3 mt-0">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Calls</title>
+                                <desc>A line styled icon from Orion Icon Library.</desc>
+                                <path data-name="layer1" d="M58.9 47l-10.4-6.8a4.8 4.8 0 0 0-6.5 1.3c-2.4 2.9-5.3 7.7-16.2-3.2S19.6 24.4 22.5 22a4.8 4.8 0 0 0 1.3-6.5L17 5.1c-.9-1.3-2.1-3.4-4.9-3S2 6.6 2 15.6s7.1 20 16.8 29.7S39.5 62 48.4 62s13.2-8 13.5-10-1.7-4.1-3-5z" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path>
+                            </svg>
+                        </div>
+                    </center>
                     <h5 class="card-title">Call</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">(266) 855-0710</p>
                 </div>
             </div>
-            <div class="card text-white m-3" style="max-width: 18rem;">
-                <div class="card-header">
-                    <div class="contact-card-icon shadow-1-strong">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <title>At Sign @</title>
-                            <desc>A line styled icon from Orion Icon Library.</desc>
-                            <circle data-name="layer2" cx="31" cy="32" r="14" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></circle>
-                            <path data-name="layer1" d="M45 18v20c0 10.9 17 12.3 17-6M46 58.5A30 30 0 1 1 62 32" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="card-body pt-5">
+            <div class="card text-white m-3 col-lg-2 col-10">
+                <div class="card-body">
+                    <center>
+                        <div class="contact-card-icon shadow-1-strong m-3 mt-0">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>At Sign @</title>
+                                <desc>A line styled icon from Orion Icon Library.</desc>
+                                <circle data-name="layer2" cx="31" cy="32" r="14" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></circle>
+                                <path data-name="layer1" d="M45 18v20c0 10.9 17 12.3 17-6M46 58.5A30 30 0 1 1 62 32" fill="none" stroke="#fec400" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path>
+                            </svg>
+                        </div>
+                    </center>
                     <h5 class="card-title">Email</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Elekro@email.com</p>
                 </div>
             </div>
-            <div class="card text-white m-3" style="max-width: 18rem;">
-                <div class="card-header">
-                    <div class="contact-card-icon shadow-1-strong">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <title>Instagram</title>
-                            <desc>A line styled icon from Orion Icon Library.</desc>
-                            <path data-name="layer2" d="M44.122 2H19.87A17.875 17.875 0 0 0 2 19.835v24.2a17.875 17.875 0 0 0 17.87 17.834h24.252A17.875 17.875 0 0 0 62 44.034v-24.2A17.875 17.875 0 0 0 44.122 2zM55.96 44.034a11.825 11.825 0 0 1-11.838 11.812H19.87A11.825 11.825 0 0 1 8.032 44.034v-24.2A11.825 11.825 0 0 1 19.87 8.022h24.252A11.825 11.825 0 0 1 55.96 19.835zm0 0" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="miter"></path>
-                            <path data-name="layer1" d="M32 16.45a15.484 15.484 0 1 0 15.514 15.484A15.519 15.519 0 0 0 32 16.45zm0 24.95a9.461 9.461 0 1 1 9.482-9.461A9.472 9.472 0 0 1 32 41.4zm19.263-24.834a3.719 3.719 0 1 1-3.719-3.711 3.714 3.714 0 0 1 3.719 3.711zm0 0" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="miter"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="card-body pt-5">
+            <div class="card text-white m-3 col-lg-2 col-10">
+                <div class="card-body">
+                    <center>
+                        <div class="contact-card-icon shadow-1-strong m-3 mt-0">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Instagram</title>
+                                <desc>A line styled icon from Orion Icon Library.</desc>
+                                <path data-name="layer2" d="M44.122 2H19.87A17.875 17.875 0 0 0 2 19.835v24.2a17.875 17.875 0 0 0 17.87 17.834h24.252A17.875 17.875 0 0 0 62 44.034v-24.2A17.875 17.875 0 0 0 44.122 2zM55.96 44.034a11.825 11.825 0 0 1-11.838 11.812H19.87A11.825 11.825 0 0 1 8.032 44.034v-24.2A11.825 11.825 0 0 1 19.87 8.022h24.252A11.825 11.825 0 0 1 55.96 19.835zm0 0" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="miter"></path>
+                                <path data-name="layer1" d="M32 16.45a15.484 15.484 0 1 0 15.514 15.484A15.519 15.519 0 0 0 32 16.45zm0 24.95a9.461 9.461 0 1 1 9.482-9.461A9.472 9.472 0 0 1 32 41.4zm19.263-24.834a3.719 3.719 0 1 1-3.719-3.711 3.714 3.714 0 0 1 3.719 3.711zm0 0" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="miter"></path>
+                            </svg>
+                        </div>
+                    </center>
                     <h5 class="card-title">Instagram</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">@Elektro.id</p>
                 </div>
             </div>
-            <div class="card text-white m-3" style="max-width: 18rem;">
-                <div class="card-header">
-                    <div class="contact-card-icon shadow-1-strong">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <title>Facebook</title>
-                            <desc>A line styled icon from Orion Icon Library.</desc>
-                            <path data-name="layer1" d="M39.312 13.437H47V2h-9.094C26.938 2.469 24.688 8.656 24.5 15.125v5.719H17V32h7.5v30h11.25V32h9.281l1.781-11.156H35.75v-3.469a3.714 3.714 0 0 1 3.562-3.938z" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="card-body pt-5">
+            <div class="card text-white m-3 col-lg-2 col-10">
+                <div class="card-body">
+                    <center>
+                        <div class="contact-card-icon shadow-1-strong m-3 mt-0">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title" aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <title>Facebook</title>
+                                <desc>A line styled icon from Orion Icon Library.</desc>
+                                <path data-name="layer1" d="M39.312 13.437H47V2h-9.094C26.938 2.469 24.688 8.656 24.5 15.125v5.719H17V32h7.5v30h11.25V32h9.281l1.781-11.156H35.75v-3.469a3.714 3.714 0 0 1 3.562-3.938z" fill="none" stroke="#fec400" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" stroke-linejoin="round"></path>
+                            </svg>
+                        </div>
+                    </center>
                     <h5 class="card-title">facebook</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Elektro.id</p>
                 </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-3 col-12 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
                 <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
+            <div class="col-lg-3 col-md-3 col-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -219,7 +221,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
+            <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
@@ -236,14 +238,7 @@
     </footer>
     <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-    const card = document.querySelector('.map-card');
-    const cardBody = card.querySelector('.card-body')
-
-    card.addEventListener('click', () => {
-        cardBody.classList.toggle('closed')
-    });
-    </script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
