--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -57,21 +58,21 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="image/bg (2).jpg" alt="Carousel 1" class="d-block" style="width:100%; height: 600px;">
+                    <img src="image/bg3.jpg" alt="Carousel 1" class="d-block carousel-image">
                     <div class="carousel-caption">
                         <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
                         <h3>Welcome</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="image/bg (1).jpg" alt="Carousel 2" class="d-block" style="width:100%; height: 600px;">
+                    <img src="image/bg (2).jpg" alt="Carousel 2" class="d-block carousel-image">
                     <div class="carousel-caption">
                         <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
                         <h3>Welcome</h3>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="image/bg (3).jpg" alt="Carousel 3" class="d-block" style="width:100%; height: 600px;">
+                    <img src="image/bg1.jpg" alt="Carousel 3" class="d-block carousel-image">
                     <div class="carousel-caption">
                         <img src="image/elektroWhite2.svg" alt="" width="35" height="35">
                         <h3>Welcome</h3>
@@ -86,37 +87,31 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
-        <h2 class="text-center m-5 fw-bold">Electro</h2>
+        <h2 class="text-center m-4 fw-bold">Electro</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5">
             <div class="col-lg-3 col-md-11 col-sm-11 p-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <h4>
+                    <span class="material-symbols-outlined">speed</span><br>
+                    Performance</h4>
+                <p class="text-justify">Elektro is a car designed with an emphasis on dynamic performance, such as handling, acceleration, top speed, or thrill of driving. Our car can reach 60 miles in 2.5 seconds because there's no slow word in our dictionary</p>
             </div>
             <div class="col-lg-3 col-md-11 col-sm-11 p-3 border-teks">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <h4>
+                    <span class="material-symbols-outlined">directions_car</span><br>
+                    Comfortable</h4>
+                <p class="text-justify">Comfort is the most important point when driving. our car is the most comfortable car because it has various features that will spoil you, and we have perfect points in the crash test so that your safety will also be guaranteed</p>
             </div>
             <div class="col-lg-3 col-md-11 col-sm-11 p-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <h4>
+                    <span class="material-symbols-outlined">update</span><br>
+                    Future</h4>
+                <p class="text-justify">Elektro is designed with the latest technology to produce a car that is environmentally friendly but still has superior performance and a cool design.Bright future will come if you use Elektro</p>
             </div>
         </div>
         <div class="text-center"><img class="img-fluid" src="image/divide.png" alt="" style="width: auto; height: 150px;"></div>
         <h2 class="text-center m-5 fw-bold">Featured Vehicle</h2>
         <div class="d-flex flex-wrap justify-content-center mb-5 text-white">
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 col-md-3 col-10">
                 <a class="nav-link" href="vehicle.html">
                     <img src="image/model3/exterior-image-167.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -124,7 +119,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card m-3" style="width: 18rem;">
+            <div class="card m-3 col-md-3 col-10">
                 <a class="nav-link" href="vehicle.html">
                     <img src="image/models/exterior-image-164.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -136,11 +131,11 @@
     </main>
     <footer>
         <div class="d-flex flex-wrap justify-content-center footer">
-            <div class="col-lg-3 col-md-3 col-sm-12 p-3">
+            <div class="col-lg-3 col-md-3 col-12 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">To everyone,</h5>
                 <p>Thank you for visiting our website</p>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 p-3">
+            <div class="col-lg-3 col-md-3 col-6 p-3">
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
@@ -157,7 +152,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 p-3 mb-3">
+            <div class="col-lg-3 col-md-3 col-6 p-3 mb-3">
                 <h5 class="mt-3 mb-3 fw-bold">Send a Message</h5>
                 <div class="form-group mb-2">
                     <input type="text" class="form-control" placeholder="Name" name="">
